--- a/org.spoofax.entitytg.textual/.gitignore
+++ b/org.spoofax.entitytg.textual/.gitignore
@@ -1,21 +1,10 @@
 bin
 .cache
-include/EntityTG.def
-include/EntityTG-parenthesize.str
-include/EntityTG-Permissive.def
-include/EntityTG.generated.pp.af
-include/EntityTG.packed.esv
-include/EntityTG.pp.af
-include/EntityTG.rtg
-include/EntityTG.str
-include/EntityTG.tbl
-include/entitytg.rtree
-include/entitytg.ctree
-include/entitytg.ctree.dep
-include/entitytg.jar
+include
 editor/java/trans
-editor/EntityTG-*.generated.esv
-syntax/EntityTG*.generated.esv
+editor/*generated*
+syntax/*generated*
+trans/*generated*
 .settings/org.eclipse.jdt.core.prefs
 utils
 lib/*.generated.str
